day8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: mtaori/static-webapp:latest
          ports:
            - containerPort: 80 
          resources:
            limits:
              cpu: 50m
            requests:
              cpu: 20m
